--- a/README.Rmd
+++ b/README.Rmd
@@ -9,6 +9,10 @@ editor_options:
   chunk_output_type: console
 ---
 
+<!-- badges: start -->
+[![R-CMD-check](https://github.com/mitsuoxv/jp-household/workflows/R-CMD-check/badge.svg)](https://github.com/mitsuoxv/jp-household/actions)
+<!-- badges: end -->
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 
