--- a/README.Rmd
+++ b/README.Rmd
@@ -8,7 +8,7 @@ output:
 ---
 
 <!-- badges: start -->
-[![R-CMD-check](https://github.com/mitsuoxv/jp-household/workflows/R-CMD-check/badge.svg)](https://github.com/mitsuoxv/jp-household/actions)
+[![R-CMD-check](https://github.com/mitsuoxv/jp-household/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/mitsuoxv/jp-household/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 ```{r setup, include=FALSE}
